forgejo/01-allow-public-web-and-ssh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-web-and-ssh-ingress
  namespace: forgejo
spec:
  podSelector:
    matchLabels:
      app: forgejo
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 22
