forgejo/allow-cloudflared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared-ingress
  namespace: forgejo
spec:
  podSelector:
    matchLabels:
      app: forgejo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: clouadfare
    ports:
    - port: 3000
      protocol: TCP
